fixed overflow on css

--- a/css.css
+++ b/css.css
@@ -55,6 +55,8 @@ body {
     color: yellow;
     /*text-decoration: bold;*/
     font-size: 20px;
+    max-width: 100%;
+    overflow-x: hidden;
 
 }
 
